--- a/Final-Report/method.tex
+++ b/Final-Report/method.tex
@@ -1,6 +1,5 @@
 \chapter{Method}
-
-This section covers the principles behind each feature and different designs considered.
+This section covers the principles and design decisions behind each feature.
 
 \section{Scan Simulation}
 The scan simulation works by resampling the perfect scan supplied. Each point on the simulated scan is a result of linearly interpolating a point in the original.
