--- a/Final-Report/method.tex
+++ b/Final-Report/method.tex
@@ -1,6 +1,10 @@
 \chapter{Method}
 This section covers the principles and design decisions behind each feature.
 
+% ----------------------------- %
+% ------ SCAN SIMULATION ------ %
+% ----------------------------- %
+
 \section{Scan Simulation}
 The scan simulation works by resampling the perfect scan supplied. Each point on the simulated scan is a result of linearly interpolating a point in the original.
 
@@ -54,6 +58,10 @@ The simulation is acquired slice by slice and each slice can optionally be given
   \caption{Effects Motion Corruption}\label{fig:scan_simulation_movement_comparison}
 \end{figure}
 
+% ----------------------------- %
+% ------- RECONSTRUCTION ------ %
+% ----------------------------- %
+
 \clearpage
 \section{Reconstruction}
 This part of the tool provides an interface to the fast GPU reconstruction code developed in \cite{uncertaintysvd}. The implementation makes use of the CTK (Common Toolkit) Command Line Module\cite{ctkcmd}, which allows calls to the GPU code to be made from within the plugin. A wrapper for the code has been written, which comforms to the Command Line Module XML Schema, and this provides the module with all the information it requires to parse the parameters and automatically import the results.
@@ -62,11 +70,16 @@ The optional landmarking functionality allows the registration of each of the sl
 
 <insert 4 points rigid translation diagram>
 
+
+% ----------------------------- %
+% ------- VISUALIZATIONS ------ %
+% ----------------------------- %
+
 \clearpage
 \section{Visualizations}
 
 % ------------------------- %
-% ------ Uncertainty ------ %
+% ------ UNCERTAINTY ------ %
 % ------------------------- %
 \subsection{Uncertainty}\label{method:uncertainty}
 Three different types of uncertainty have been considered, though with different reconstruction algorithms there may be other metrics that can be extracted.
@@ -80,6 +93,10 @@ Three different types of uncertainty have been considered, though with different
 Having three separate 'channels' of uncertainty makes visualizing it more difficult. Trying to display all three at one time will likely be too much information to communicate at once however all of the visualizations developed are applicable to each individually or alternately the three types can be aggregated into one combined value.
 
 An aggregation of all three will be able to give a useful overview of the situation, however being able to isolate a single type of uncertainty is important as it gives the viewer an idea of what caused the reconstruction issues.
+
+% ----------------------------- %
+% ------- PRE-PROCESSING ------ %
+% ----------------------------- %
 
 \subsection{Pre-processing}\label{method:pre-processing}
 Before the uncertainty is visualized it is first pre-processed. Figure \ref{fig:preprocesspipeline} illustrates the order in which the operations are applied. Operations with a dotted border are optional.
@@ -159,6 +176,10 @@ Figure \ref{fig:growing} explains how the binary morphology in step 2 works. Eac
 \subsubsection*{Align to Scan}
 The image to world matrix of the scan is copied to the uncertainty volume. This results in pixel (x, y, z) in both the scan and uncertainty being mapped to the same point in space, allowing the overlay.
 
+% ------------------------------- %
+% ------- TEST UNCERTAINTY ------ %
+% ------------------------------- %
+
 \clearpage
 \subsection{Test Uncertainties}\label{method:test_uncertainties}
 To test and debug the visualizations during development a number of artificial uncertainty volumes were used, as well as uncertainty from a genuine fetal brain reconstruction.
@@ -217,6 +238,10 @@ Uncertainty generated from an example super-resolution reconstruction of a fetal
   \end{subfigure}
   \caption{Test Uncertainty Volumes.}\label{fig:test_uncertainties}
 \end{figure}
+
+% ----------------------------- %
+% -------- THRESHOLDING ------- %
+% ----------------------------- %
 
 \clearpage
 \subsection{Thresholding}\label{method:thresholding}
@@ -388,6 +413,10 @@ Below are the results achieved with the test uncertainties (see section \ref{sec
   % \caption{Opacity Transfer Functions. Opacity of 0 is transparent, 1 is opaque.}\label{fig:thresholdingvariation1problem}
 \end{figure}
 
+% ----------------------------- %
+% ---------- SPHERE  ---------- %
+% ----------------------------- %
+
 \clearpage
 \subsection{Sphere}\label{method:sphere}
 Two ways of mapping the uncertainty to the surfaces have been trialled. The first maps the uncertainty to a texture which can then be applied to a surface. 
@@ -459,6 +488,10 @@ A tortoise and hare algorithm is then used to be able to vary how far into the v
 The accumulation that the tortoise does can also be customized. By default it will take the average of all of the samples it takes, but the best value and also the worst value along the ray can be extracted.
 
 Once all of the points have been computed some scaling can be implemented to improve the contrast of the visualization. In many cases the average uncertainty will be roughly the same everywhere and if the range [0-1] is mapped to the entire colour range the values end up looking largely indistinguishable; to fix this the outputted uncertainty range can be linearly mapped to make better use of the available colours.
+
+% ----------------------------- %
+% ---------- SURFACE ---------- %
+% ----------------------------- %
 
 \clearpage
 \subsection{Surface}\label{method:surface}
@@ -620,6 +653,10 @@ When applied to the surface the use of this option very much depends on the area
 \end{figure}
 
 Where this parameter may be more useful however is when dealing with smaller, more intricate objects, such as arteries. It would allow the uncertainty in the entire cross section to be mapped to the surface, giving an overview of that section at a glance, rather than having to rotate around it to get the full picture.
+
+% ----------------------------- %
+% ------ NEXT SCAN PLANE ------ %
+% ----------------------------- %
 
 \clearpage
 \subsection{Next Scan Plane}\label{method:next_scan_plane}
