--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -207,3 +207,10 @@
     howpublished = "\url{http://www.relativitybook.com/CoolStuff/erksolids.html}",
     note         = "{Last Accessed: 14/06/15}"
 }
+
+@MISC {pointregistration,
+    author       = "Peter K. Allen",
+    title        = "3D Photography: Point Based Rigid Registration",
+    howpublished = "\url{http://www.cs.columbia.edu/~allen/PHOTOPAPERS/registerpts.pdf}",
+    note         = "{Last Accessed: 15/06/15}"
+}
