--- a/Final-Report/method.tex
+++ b/Final-Report/method.tex
@@ -6,7 +6,7 @@ This section covers the principles and design decisions behind each feature.
 % ----------------------------- %
 
 \section{Scan Simulation}
-The scan simulation works by resampling the perfect scan supplied. Each point on the simulated scan is a result of linearly interpolating a point in the original.
+The scan simulation works by resampling the perfect scan supplied. Each point in the simulation is a result of linearly interpolating a point in the original.
 
 The point that is sampled is determined by the dimensions, resolution, center and direction of the scan. Firstly the $origin$ (location of pixel (0, 0, 0)) is computed from the $center$.
 
@@ -30,12 +30,14 @@ origin = center \text{ }-\text{ }& xDir * \frac{(scanWidth * xResolution)}{2} \n
 Then point $p$ in the simulated scan can be mapped to sample point $s$:
 
 \begin{align*}
-	 s = origin \text{ }+\text{ }& xDir * (scanWidth * p[x] * xResolution) \nonumber \\
- 	  			\text{ }+\text{ }& yDir * (scanHeight * p[y] * yResolution) \nonumber \\
- 	  			\text{ }+\text{ }& zDir * (numSlices * p[z] * zResolution) \nonumber \\ 	  			
+	 s = origin \text{ }+\text{ }& xDir * (p[x] * xResolution) \nonumber \\
+ 	  			\text{ }+\text{ }& yDir * (p[y] * yResolution) \nonumber \\
+ 	  			\text{ }+\text{ }& zDir * (p[z] * zResolution) \nonumber \\ 	  			
 \end{align*}
 
-The simulation is acquired slice by slice and each slice can optionally be given a random rotation to simulate movement about a point. If enabled this takes the point ($s$ above) rotates it a random amount about a random axis. Figure \ref{fig:scan_simulation_movement_comparison} shows the effect of this parameter.
+Note that the point $s$ is a continuous index. e.g. a 5 pixel image can be interpolated in the range [-0.5, 4.5].
+
+The simulation is acquired slice by slice and each slice can optionally be corrupted with motion. A transformation matrix, $T$, is generated for each slice which represents a rotation of a random number of degrees (up to a max) about a random axis. When enabled the point $T(s)$ is sampled instead of $s$. If the transform moves $s$ out of the volume then the value is 0. Figure \ref{fig:scan_simulation_movement_comparison} shows the effect of changing the maximum rotation angle.
 
 \begin{figure}[H]
   \centering
@@ -55,7 +57,25 @@ The simulation is acquired slice by slice and each slice can optionally be given
     \includegraphics[width=\textwidth]{images/scan_simulation/scan_simulation_10.png}
     \caption{10 Degrees}\label{fig:scan_simulation_10_degrees}
   \end{subfigure}
-  \caption{Effects Motion Corruption}\label{fig:scan_simulation_movement_comparison}
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/scan_simulation/scan_simulation_20.png}
+    \caption{20 Degrees}\label{fig:scan_simulation_20_degrees}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/scan_simulation/scan_simulation_30.png}
+    \caption{30 Degrees}\label{fig:scan_simulation_30_degrees}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.32\textwidth}
+    \includegraphics[width=\textwidth]{images/scan_simulation/scan_simulation_45.png}
+    \caption{45 Degrees}\label{fig:scan_simulation_45_degrees}
+  \end{subfigure}
+  \caption{Effects of Motion Corruption}\label{fig:scan_simulation_movement_comparison}
 \end{figure}
 
 % ----------------------------- %
@@ -68,8 +88,58 @@ This part of the tool provides an interface to the fast GPU reconstruction code 
 
 The optional landmarking functionality allows the registration of each of the slices stacks to be guided.
 
-<insert 4 points rigid translation diagram>
+Assuming that the transformation between each of the slice stacks is rigid (translation + rotation) then four points on each stack are needed to perfectly describe the transformation. Figure \ref{fig:rigid_transformation} shows an example 3D object marked up with four points.
 
+\begin{figure}[H]
+  \centering
+  \begin{subfigure}[b]{0.5\textwidth}
+    \includegraphics[width=\textwidth]{images/reconstruction/v1.png}
+    \caption{Object A}\label{fig:v2}
+  \end{subfigure}%
+  ~ %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
+    %(or a blank line to force the subfigure onto a new line)
+  \begin{subfigure}[b]{0.5\textwidth}
+    \includegraphics[width=\textwidth]{images/reconstruction/v2.png}
+    \caption{Object B}\label{fig:v1}
+  \end{subfigure}
+  \caption{Example Rigid Transform. Translation + Rotation}\label{fig:rigid_transformation}
+\end{figure}
+
+Given only three points the full transformation is ambiguous. Supposing above we did not know the location of the red point in the second object, then there are two possible positions for it, either going away from the camera (relative to the green point) or towards it.
+
+The transformation between the two objects can be decided as follows\cite{pointregistration}:
+
+\begin{align*}
+          \text{Compute axes.} \nonumber \\
+          \nonumber \\
+  A_x & = A[2] - A[1] \nonumber \\
+  A_y & = (A[3] - A[1]) - [(A[3] - O[1]) \cdot A_x]A_x \nonumber \\
+  A_z & = +(A_x \times A_y) \text{ if } (A[4] - A[1]) \cdot A_z > 0\nonumber \\  
+  A_z & = -(A_x \times A_y) \text{ if } (A[4] - A[1]) \cdot A_z < 0\nonumber \\
+          \nonumber \\
+          \text{...and the same for B.} \nonumber \\
+          \nonumber \\
+          \text{Build rotation matrices.} \nonumber \\
+          \nonumber \\
+  R_A & = [A_x; A_y; A_z] \nonumber \\
+  R_B & = [B_x; B_y; B_z] \nonumber \\
+          \nonumber \\
+          \text{Rotation, $R$, from $A$ to $B$:} \nonumber \\
+          \nonumber \\
+  R R_A & = R_B \nonumber \\
+  R & = R_B R_A^{-1} \nonumber \\
+  R & = R_B R_A^T \text{ ($R^{-1} = R^T$ for rotation matrices)} \nonumber \\
+          \nonumber \\
+          \text{Translation, $T$, from $A$ to $B$:} \nonumber \\
+          \nonumber \\
+  T & = B[1] - R A[1] \nonumber \\
+          \nonumber \\
+  \text{where}& \\
+  & X[p] \text{ - point $p$ in object $X$} \nonumber \\
+  & X_x \text{ - x axis of object $X$} \nonumber \\
+  & X_y \text{ - y axis of object $X$} \nonumber \\
+  & X_z \text{ - z axis of object $X$} \nonumber        
+\end{align*}
 
 % ----------------------------- %
 % ------- VISUALIZATIONS ------ %
@@ -85,9 +155,9 @@ The optional landmarking functionality allows the registration of each of the sl
 Three different types of uncertainty have been considered, though with different reconstruction algorithms there may be other metrics that can be extracted.
 
 \begin{enumerate}
-  \item sampling - How many points in the original scans correspond to the area in the reconstruction? Some parts of reconstruction will have many points in the original stacks to use, but others will not and will have to be interpolated.
+  \item sampling - How many points in the original scans correspond to the area in the reconstruction? Some parts of reconstruction will have many points in the original stacks to use, but others will not more interpolation will be required.
   \item registration - How precisely is the registration known? Depending on the calibration of the scanner and the amount of movement that occurs during the scan our confidence in the registration will change.
-  \item intensity bias - Bias is an artefact that occurs in MRI that means that some areas of the image are darker than others, not due to the tissue itself, but due to the distance from the receiver coil. Some areas have more of this inhomogeneity than others and contrast will be affected.
+  \item intensity bias - Bias is an artefact that occurs in MRI that means that some areas of the image are darker than others, not due to the tissue itself, but the distance from the receiver coil. Some areas have more of this inhomogeneity than others and contrast will be affected.
 \end{enumerate}
 
 Having three separate 'channels' of uncertainty makes visualizing it more difficult. Trying to display all three at one time will likely be too much information to communicate at once however all of the visualizations developed are applicable to each individually or alternately the three types can be aggregated into one combined value.
@@ -112,7 +182,7 @@ Before the uncertainty is visualized it is first pre-processed. Figure \ref{fig:
 The uncertainty is linearly scaled so each value lies between 0 (bad) and 1 (good).
 
 \subsubsection*{Invert}
-The uncertainty is inverted. $Uncertainty = 1 - Uncertainty$.
+The uncertainty can be inverted if saved the opposite way around. (\texttt{Uncertainty = 1 - Uncertainty})
 
 \subsubsection*{Erosion}
 The edges of the uncertainty are removed in three steps:
@@ -156,7 +226,7 @@ Figure \ref{fig:erosionoverview} shows how the soft fade out of uncertainty due 
   \caption{Steps involved in removing the edge.}\label{fig:erosionoverview}
 \end{figure}
 
-Figure \ref{fig:growing} explains how the binary morphology in step 2 works. Each value in the image is either in the mask or out of the mask; when the growing filter is applied a neighbourhood around each point is examined and if any point is in the mask then the point is added to the mask.
+Figure \ref{fig:growing} explains how the binary morphology in step 2 works. Each value in the image is either in the mask or out of the mask. To grow the mask a neighbourhood around each point is examined and if any neighbour is in the mask then that point is added to the mask. The size and shape of the neighbourhood determines how much the mask grows.
 
 \begin{figure}[H]
   \centering
@@ -174,7 +244,7 @@ Figure \ref{fig:growing} explains how the binary morphology in step 2 works. Eac
 \end{figure}
 
 \subsubsection*{Align to Scan}
-The image to world matrix of the scan is copied to the uncertainty volume. This results in pixel (x, y, z) in both the scan and uncertainty being mapped to the same point in space, allowing the overlay.
+The image to world matrix of the scan is copied to the uncertainty volume. This results in pixel (x, y, z) in both the scan and uncertainty being mapped to the same point in space, allowing one to be overlayed on the other.
 
 % ------------------------------- %
 % ------- TEST UNCERTAINTY ------ %
@@ -182,12 +252,10 @@ The image to world matrix of the scan is copied to the uncertainty volume. This 
 
 \clearpage
 \subsection{Test Uncertainties}\label{method:test_uncertainties}
-To test and debug the visualizations during development a number of artificial uncertainty volumes were used, as well as uncertainty from a genuine fetal brain reconstruction.
-
-Results of each visualization with these test uncertainties are shown in the relevant sections.
+To test and debug each visualization a number of artificial uncertainties have been created as well as an example from a genuine fetal brain reconstruction. Results of each visualization with these uncertainties are compared.
 
 \subsection*{Sphere of Uncertainty}
-An uncertainty volume where the uncertainty is proportional to the distance from the center. The uncertainty at the center is 0 (very uncertain) which then goes to 1 (very certain) at the edges.
+An uncertainty volume where the uncertainty is proportional to the distance from the center. The uncertainty is 0 (very bad) at the center and 1 (very good) at the edges.
 
 \subsection*{Sphere in Corner}
 Similar to the sphere, but instead of being placed in the middle it is placed in one corner of the volume.
@@ -245,7 +313,9 @@ Uncertainty generated from an example super-resolution reconstruction of a fetal
 
 \clearpage
 \subsection{Thresholding}\label{method:thresholding}
-The implementation uses a filter provided by ITK to create a binary mask set to 1 where the uncertainty is in the range and 0 where it is not. This mask is then overlayed on the reconstructed scan in 2D and made transparent so both the uncertain area and underlying scan can be seen simultaneously. See figure \ref{fig:thresholding2d}.
+The idea behind thresholding is to isolate areas in the reconstructed image that are within a particular range of uncertainty. This visualization can be viewed in both 2D and 3D.
+
+The visualization is realised by first creating a binary mask, set to 1 where the uncertainty is within the range [min, max] and 0 where it is not. This mask can then be rendered transparently on top of the reconstructed scan in 2D so both the uncertain area and underlying scan can be seen simultaneously. See figure \ref{fig:thresholding2d}.
 
 \begin{figure}[H]
   \centering
@@ -292,7 +362,7 @@ The transfer functions used in each variation can be seen in figure \ref{fig:thr
   \caption{Opacity Transfer Functions. Opacity of 0 is transparent, 1 is opaque.}\label{fig:thresholdingoverview}
 \end{figure}
 
-An issue found with variation 1 was that the renderer still draws the edge of the uncertainty, even though it had previously been removed by erosion. This is due to the renderer using linear interpolation to take samples along each ray fired into the volume. Figure \ref{fig:thresholdingvariation1problem} illustrates the problem - the background has uncertainty 0.0, and the object has uncertainty $\sim$0.6. Points interpolated between the two will lie in the range [0.0-0.6] and so we find values of uncertainty that don't actually exist in the object.
+An issue found with variation 1 was that the renderer still draws the edge of the uncertainty, even though it had previously been removed by erosion. This is due to the renderer using linear interpolation to take samples along each ray fired into the volume. Figure \ref{fig:thresholdingvariation1problem} illustrates the problem: the background has uncertainty 0.0, and the object has uncertainty $\sim$0.6. Points interpolated between the two will lie in the range [0.0-0.6] and so we find values of uncertainty that don't actually exist in the object.
 
 \begin{figure}[h]
   \centering
@@ -326,9 +396,7 @@ A solution to this problem is to use a gradient transfer function which allows t
     \includegraphics[width=\textwidth]{images/thresholding/thresholdvariation1threshold1.png}
     \caption{Threshold 0.05}
     \label{fig:thresholdingvariation1threshold1}
-  \end{subfigure}
-  ~%add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
-    %(or a blank line to force the subfigure onto a new line)
+  \end{subfigure}\\[11pt]
   \begin{subfigure}[b]{0.5\textwidth}
     \includegraphics[width=\textwidth]{images/thresholding/thresholdvariation1threshold2.png}
     \caption{Threshold 0.02}
@@ -345,6 +413,8 @@ A solution to this problem is to use a gradient transfer function which allows t
 \end{figure}
 
 Although tweaking the threshold can remove edge artefact variation 2 was found not to exhibit these problems and so this implementation was used in the evaluation of the prototype.
+
+As well as allowing the user to explicitly specify a range [min, max], it is possible to find the worst x$\%$ of uncertainty. To do this a histogram is built which splits the uncertainty into buckets. The histogram is then traversed, starting from the first (least certain) bucket, and the occurences are accumulated until the total is less than $total_pixels * \frac{x}{100}$.
 
 \newpage
 \subsection*{Results}
