--- a/Final-Report/implementation.tex
+++ b/Final-Report/implementation.tex
@@ -282,3 +282,5 @@ Figure \ref{fig:nextscanplane} illustrates this process.\\
   \end{subfigure}
   \caption{Next scan plane process.}\label{fig:nextscanplane}
 \end{figure}
+
+Implementation uses the SVD implementation from the VNL numerics library.
